--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -90,6 +90,7 @@
     font-size: 2rem;
     font-weight: 600;
     color: var(--text-color);
+    -webkit-tap-highlight-color: transparent;
 }
 .nav-head-item-primary {
     color:var(--color-pri);
@@ -360,6 +361,7 @@ flex: 1;
 background-color: var(--yelo-color);
 border-bottom-left-radius: 80px;
 border-bottom-right-radius: 80px;
+animation: fadeIn2 linear 0.6s;
 }
 .top-info {
 display: flex;
@@ -447,6 +449,8 @@ color: #48292d;
 }
 .open-hours {
     background-color: var(--yelo-color);
+/* animation: growths ease 0.4s; */
+
 }
 
 
@@ -590,21 +594,31 @@ padding: 20px 22px;
 .upcoming-event-main {
     flex: 1;
     display: flex;
-    grid-column-gap: 28px;
+    grid-column-gap: 20px;
+    margin-bottom: 1px;
     
 }
 /*  */
 .upcoming-main-body {
     display: flex;
-    overflow: scroll;
+    overflow-x: scroll;
     margin-top: 12px;
 }
-.upcoming-main-body::-webkit-scrollbar{
-    /* background-color: f5f5f5; */
-    /* border-radius: 10px; */
+.upcoming-main-body::-webkit-scrollbar {
+height: 10px;
 }
-
-  
+.upcoming-main-body::-webkit-scrollbar-track {
+    background: #e1e0e0;
+    border-radius: 10px;
+  }
+  .upcoming-main-body::-webkit-scrollbar-thumb {
+    background-color: rgba(166, 165, 165,0.4);
+    border-radius: 10px;
+    
+  }
+  .upcoming-main-body::-webkit-scrollbar-thumb:hover {
+    background: #868686;
+  }
 
 .upcoming-content-heading {
     margin-bottom: 6px;
